deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web_deploy
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
       —name: web
          image: sudheer1994/test:1.0.0
          ports:
           —containerPort: 3000
